<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Project</string>
    <string name="action_settings">设置</string>
	<string name = "video_player_best_fit">最优匹配</string>
	<string name = "video_player_fit_horizontal">水平匹配</string>
	<string name = "video_player_fit_vertical">垂直匹配</string>
	<string name = "video_player_16x9">16x9</string>
	<string name = "video_player_4x3">4x3</string>
	<string name = "video_player_original">原始大小</string>


	<string name="h8_176_144">42000a,Z0IACpZUFiYg,aM44gA==</string>
	<string name="h10_176_144">42000a,Z0IACpZUFiYg,aM44gA==</string>

	<string name="h8_320_240">42000a,Z0IACpZUCg+I,aM44gA==</string>
	<string name="h10_320_240">42000a,Z0IACpZUCg+I,aM44gA==</string>

	<string name="h10_640_480">42000a,Z0IACpZUBQHogA==,aM44gA==</string>
	<string name="h8_640_480">42000a,Z0IACpZUBQHogA==,aM44gA==</string>
	<string name = "aout_audiotrack">AudioTrack (native)</string>
	<string name = "aout_opensles">OpenSL ES</string>
	<string name="checkOnlineOK">connect to server ok</string>
	<string name="checkOnlineFailure">connect to server failed</string>


	<string name="welcome_page1_address">地点</string>
	<string name="welcome_page1_search_button">搜索</string>
	<string name="welcome_page_start">start</string>
	<string name="welcome_page_hint">请输入地点名进行搜索</string>
	<string name="welcome_page1_timeHint">定时（s）</string>
	<string name="welcome_page1_hint_init">请输入地点搜索</string>
	<string name="welcome_page1_addressHint">  地点  </string>
	<string name="welcome_page1_search_button_text">搜索</string>
	<string name="fatalError">应用出现了大问题</string>
	<string name="youMustInputSomething">请输入地点</string>
	<string name="inputAddressHint">请输入地点进行搜索</string>
	<string name="searchCityFalied">失败！原因是：</string>
	<string name="checkYourInternet">无网络连接，请检查你的网络</string>
	<string name="startRecord">开始录像</string>
	<string name="choosedCity">你选择的地点是：</string>
	<string name="youMustChooseACity">请先选择一个地点</string>
	<string name="welcome_page1_title">Record</string>
	<string name="welcome_page2_title">Play</string>
	<string name="welcome_page2_addressHint">地点</string>
	<string name="welcome_page2_search_button_text">搜索</string>
	<string name="welcome_page2_chooseText">选择查看模式</string>
	<string name="welcome_page2_choose_old">查看过去</string>
	<string name="welcome_page2_choose_now">查看现在</string>
	<string name="welcome_chooseCity_text">选择地点</string>
	<string name="welcome_page2_chooseFile_text">选择文件</string>
	<string name="welcome_page2_chooseDevice_text">选择设备</string>
	<string name="welcome_page2_play_button_text">play</string>
	<string name="welcome_page2_chooseTimeOK_button">ok</string>
	<string name="welcome_page2_chooseTimeCancel_button">cancel</string>


	<!-- for VLC -->

	<string name="filebrowser_sdfail">Unable to open SD card. Please check it is mounted correctly.</string>
	<string name="filebrowser_root">Root</string>
	<string name="filebrowser_title">Select media to play</string>
	<string name="ml_no_media_dir">No media directory</string>
	<string name="sortby">Sort by…</string>
	<string name="sortby_name">Name</string>
	<string name="sortby_length">Length</string>
	<string name="searchable_hint">Search…</string>
	<string name="history">History</string>
	<plurals name="search_found_results_quantity">
		<item quantity="one">%d result found</item>
		<item quantity="other">%d results found</item>
	</plurals>
	<string name="show_player">Show player</string>
	<string name="hide_mini_player">Hide mini-player</string>
	<string name="play">Play</string>
	<string name="play_as_audio">Play as audio</string>
	<string name="play_as_video">Play as video</string>
	<string name="append">Append</string>
	<string name="play_all">Play all</string>
	<string name="append_all">Append all</string>
	<string name="delete">Delete</string>
	<string name="set_song">Set as ringtone</string>
	<string name="info">Information</string>
	<string name="confirm_delete">Delete the file \'%1$s\' ?</string>
	<string name="pause">Pause</string>
	<string name="close">Close</string>
	<string name="not_show_again">"Don't show this message again."</string>
	<string name="beta_warning">This is a beta version.\n\nThis version is NOT STABLE!\n\nDo NOT use, unless you know what you are doing.\n\nIt might kill your kitten, destroy your house and start the mayan apocalypse.\nUse it at your own risk.\n\nHave Fun! :)</string>
	<string name="info_title">VLC Beta</string>
	<string name="unknown_artist">Unknown Artist</string>
	<string name="unknown_album">Unknown Album</string>
	<string name="unknown_genre">Unknown Genre</string>
	<string name="songs">Songs</string>
	<plurals name="songs_quantity">
		<item quantity="one">1 song</item>
		<item quantity="other">%d songs</item>
	</plurals>
	<string name="artists">Artists</string>
	<string name="albums">Albums</string>
	<plurals name="albums_quantity">
		<item quantity="one">1 album</item>
		<item quantity="other">%d albums</item>
	</plurals>
	<plurals name="subfolders_quantity">
		<item quantity="one">1 subfolder</item>
		<item quantity="other">%d subfolders</item>
	</plurals>
	<string name="parent_folder">Up to parent folder</string>
	<string name="audio">Audio</string>
	<string name="video">Video</string>
	<string name="bookmarks">Bookmarks</string>
	<string name="all_albums">All albums</string>
	<string name="genres">Genres</string>
	<string name="playlists">Playlists</string>
	<string name="title">Title</string>
	<string name="artist">Artist</string>
	<string name="album">Album</string>
	<string name="directory">Directory</string>
	<string name="directories">Directories</string>
	<string name="loading">Loading…</string>
	<string name="please_wait">Please wait…</string>
	<string name="nomedia">No media files found, please transfer files to your device or adjust your preferences.</string>
	<string name="mediafiles">Media files</string>
	<string name="notavailable">not available</string>
	<string name="nosubdirectory">No subdirectories.</string>
	<string name="validation">Are you sure?</string>
	<string name="lock_rotation">Lock screen rotation</string>
	<string name="locked">Locked</string>
	<string name="unlocked">Unlocked</string>
	<string name="surface_best_fit">Best fit</string>
	<string name="surface_fit_horizontal">Fit horizontal</string>
	<string name="surface_fit_vertical">Fit vertical</string>
	<string name="surface_fill">Fill</string>
	<string name="surface_original">Center</string>
	<string name="thumbnail">Thumbnail</string>
	<string name="refresh">Refresh</string>
	<string name="track_audio">Audio track</string>
	<string name="track_video">Video track</string>
	<string name="track_text">Subtitles track</string>
	<string name="track_unknown">Unknown track</string>
	<string name="track_codec_info">Codec: %1$s\n</string>
	<string name="track_language_info">Language: %1$s\n</string>
	<plurals name="track_channels_info_quantity">
		<item quantity="one">1 channel\n</item>
		<item quantity="other">%1$d channels\n</item>
	</plurals>
	<string name="track_samplerate_info">Sample rate: %1$d Hz\n</string>
	<string name="track_resolution_info">Resolution: %1$dx%2$d\n</string>
	<string name="track_framerate_info">Frame rate: %1$.3f\n</string>
	<string name="open">Open</string>
	<string name="open_mrl">Open MRL</string>
	<string name="open_mrl_dialog_title">Open network stream</string>
	<string name="open_mrl_dialog_msg">Enter network MRL: e.g. http://, mms:// or rtsp://</string>
	<string name="media_library">Media library</string>
	<string name="error_not_compatible">Sorry, your device is currently not supported by this version of VLC for Android™.</string>
	<string name="error_problem">Sorry, VLC for Android had a problem loading and had to close.</string>
	<string name="error_message_is">The error message is (please mention this when debugging):\n</string>
	<string name="playback_speed">Playback speed</string>
	<string name="time_0" translatable="false">0:00</string>
	<string name="speed_placeholder" translatable="false">1.00x</string>


	<string name="user_page1_title">Login</string>
	<string name="user_page2_title">Sign Up</string>
	<string name="user_page3_title">Update</string>
	<string name="user_page_userName">UserName</string>
	<string name="user_page_passwd">Password</string>
	<string name="user_page_confirm">Confirm</string>
	<string name="user_page_signup">注册</string>
	<string name="user_page_newPasswd">NewPasswd</string>
	<string name="user_page_renewPasswd">更新密码</string>
	<string name="inputYourUserName">请输入你的用户名</string>
	<string name="inputSuitableUserName">请输入正确格式的用户名</string>
	<string name="inputYourUserPasswd">请输入用户密码</string>
	<string name="inputSuitableUserPasswd">请输入正确格式的用户密码</string>
	<string name="inputYourUserPasswdAgain">请再次输入用户密码</string>
	<string name="inputSamePasswd">请输入相同的密码</string>
	<string name="inputNewPasswd">请输入新密码</string>
	<string name="cannotPlayTheVideo">无法播放该视频！</string>

</resources>
